@@ -1,0 +1,10 @@
+<html>
+<head>
+<title>Test</title>
+</head>
+<body>
+<h1>Test #6</h1><p>
+See <a href="http://bugzilla.gnome.org/show_bug.cgi?id=396710">http://bugzilla.gnome.org/show_bug.cgi?id=396710</a>. Make sure that /tmp/test.mov exists.<p>
+<embed type="application/x-mplayer2" src="test-local.asx"" width="512" height="394" mode="null" autoPlay="true"></embed>
+</body>
+</html>
