@@ -1,0 +1,7 @@
+<ASX VERSION="3.0">
+	<ENTRY>
+		<TITLE>Test 1</TITLE>
+		<REF HREF="file:///tmp/test.mov" />
+	</ENTRY>
+</ASX>
+
