@@ -1,5 +1,11 @@
 2007-01-15  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/tests/6.html:
+	* browser-plugin/tests/test-local.asx: add a test case for
+	bug #396710
+
+2007-01-15  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/README:
 	* browser-plugin/totemPlugin.cpp: add another envvar to
 	make the viewer abort on warnings, document the envvars used
